<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, WinYour10Activity!</string>
    <string name="app_name">Win Your 10!</string>
    <string name="toggle_Gamefeed">Esconder Gamefeed</string>
    <string name="ofdash">Launch Dashboard</string>
	<string name="spinner_layout_type_prompt">Layout Type:</string>
	<string name="of_loading">Loading...</string>
    <string name="acceder_foro">Acceder al Foro</string>
	<string name="acceder_apuntes">Apuntes</string>
	<string name="acceder_ejercicios_leton">Ejercicios Letón</string>
	<string name="acceder_ejercicios_durban">Ejercicios Durbán</string>
	<string name="teorema_bayes">Teorema de Bayes</string>
	<string name="funcion_densidad">Función densidad</string>
	<string name="logroazul">Mejor compañero</string>
	<string name="logrorojo">Más trabajador</string>
	<string name="logroama">Más constante</string>
	<string name="logrogris">Más sabio</string>
	<string name="logroverde">Más creativo</string>
	<string name="subir_fotovideo">Subir foto/vídeo</string>
	<string name="testfinal">Test final</string>
	<string name="testopcional">Test opcionales</string>
	<string name="tomarfoto">Tomar foto</string>
	<string name="mas_trabajador">Más Trabajador</string>
	<string name="mas_sabio">Más sabio</string>
	<string name="mas_constante">Más constante</string>
	<string name="espiritu_creativo">Espiritu creativo</string>
	<string name="mejor_companyero">Mejor Compañero</string>
	<string name="cero">0</string>
	<string name="actualizar_nota">Actualizar puntuaciones</string>
	
	
	<string name="Pregunta">¿Cuál de las siguientes listas de números contiene más números impares?</string>
	<string name="Resp1">1, 3, 5</string>
	<string name="Resp2">2, 4, 6</string>
	<string name="Resp3">1, 3, 6</string>
	<string name="Resp4">1, 2, 4</string>
	<string name="Boton_comprobar">Comprobar</string>
	<string name="Boton_mostrar">Mostrar Clasifiación</string>
	<string name="leaderboard_id">Leaderboard ID:</string>
	<string name="view_leaderboard">View Leaderboard</string>
	<string name="score_to_post">Score to Post</string>
    <string name="post_score">Post Score</string>
    <string name="score_display_text">Display Text</string>
    <string name="score_blob">Blob:</string>
	
	
	
    

</resources>